--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,7 @@ color: #fff;
     color: #fff;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background: #4d5ae5;
+    cursor: pointer;
 }
 .hero-btn:hover{
     background-color: #404bbf;
