--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Roboto", "Raleway", sans-serif;
+    font-family: "Roboto", sans-serif;
     color:#434455;;
     background-color: #ffffff;
    
@@ -18,7 +18,7 @@ a {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
-    line-height: 1.16;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
@@ -43,12 +43,16 @@ a {
     color: #404bbf;
 }
 
+.header-contacts {
+    font-style: normal;
+}
+
 .header-contacts-link {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-    font-style: normal;
+    
 }
 .header-contacts-link:hover {
     color: #404bbf;
