--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,8 @@ a {
     color: #434455;
     
 }
-.header-contacts-link:hover {
+.header-contacts-link:hover,
+.header-contacts-link:focus {
     color: #404bbf;
 }
 
@@ -66,7 +67,7 @@ a {
 .hero-title {
 font-weight: 700;
 font-size: 56px;
-line-height: 1.07143;
+line-height: 1.07;
 letter-spacing: 0.02em;
 text-align: center;
 color: #fff;
@@ -82,7 +83,8 @@ color: #fff;
     background: #4d5ae5;
     cursor: pointer;
 }
-.hero-btn:hover{
+.hero-btn:hover,
+.hero-btn:focus{
     background-color: #404bbf;
 }
 /* ------------------------------------------------------- */
@@ -111,12 +113,16 @@ color: #2e2f42;
 
 .team-title {
     font-size: 36px;
-    line-height: 1.11111;
+    line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
-    color: #2e2f42;   
+    color: #2e2f42;
+    text-transform: capitalize   
 }
 
+.team-list {
+    background-color: #FFFFFF
+}
 .team-item-title {
     font-weight: 500;
     font-size: 20px;
@@ -138,10 +144,11 @@ color: #2e2f42;
 
 .portfolio-title {
     font-size: 36px;
-    line-height: 1.11111;
+    line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
+    text-transform: capitalize;
 }
 
 .portfolio-item-title {
